fixed navbar being odd with not responsive on landingpage

--- a/src/assests/styles/navbar.css
+++ b/src/assests/styles/navbar.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: flex-start;
     padding-right: 5%;
+    z-index: 9999;
 }
 
 
