--- a/src/assests/styles/projects.css
+++ b/src/assests/styles/projects.css
@@ -123,7 +123,7 @@ body {
   }
 }
 
-.overlay {
+.projectOverlay {
   position: fixed;
   top: 0;
   bottom: 0;
